# noc-lens

./: .gitignore  .gitmessage  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: code-review.yml  codeql.yml  release.yml  sbom.yml  security-scan.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: Cargo.toml
backend/migrations/: 0001_init.sql
backend/src/: crypto.rs  error.rs  lib.rs  models.rs
backend/src/ai/: client.rs  mod.rs  report.rs
backend/src/db/: device.rs  group.rs  mod.rs  report.rs  schedule.rs  settings.rs  snapshot.rs
backend/src/scheduler/: mod.rs
backend/src/services/: import.rs  mod.rs
backend/src/ssh/: client.rs  commands.rs  executor.rs  mod.rs  parsers.rs  query.rs
backend/tests/: ai_test.rs  device_test.rs  group_test.rs  history_test.rs  import_test.rs  query_test.rs  schedule_test.rs
docs/: architecture.md  aruba-cmd.md  cisco-cmd.md  commit-guideline.md  fortigate-cmd.md  palo-alto-cmd.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: smoke.spec.ts  user-flows.spec.ts
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
(+27 files in other folders)
