[package]
name = "noc-lens"
version = "0.1.0"
edition = "2021"
description = "noc-lens 跨平台網路設備監控桌面應用"
default-run = "noc-lens"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
noc-lens-backend = { path = "../backend" }

[features]
custom-protocol = ["tauri/custom-protocol"]
